@@ -1,11 +1,9 @@
 package com.rarchives.ripme.ripper.rippers;
 
-import com.rarchives.ripme.ripper.AbstractHTMLRipper;
-import com.rarchives.ripme.ripper.rippers.ripperhelpers.ChanSite;
-import com.rarchives.ripme.utils.Http;
-import com.rarchives.ripme.utils.RipUtils;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -13,11 +11,20 @@ import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import com.rarchives.ripme.utils.Utils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 
+import com.rarchives.ripme.ripper.AbstractHTMLRipper;
+import com.rarchives.ripme.ripper.rippers.ripperhelpers.ChanSite;
+import com.rarchives.ripme.utils.RipUtils;
+import com.rarchives.ripme.utils.Utils;
+
 public class ChanRipper extends AbstractHTMLRipper {
+
+    private static final Logger logger = LogManager.getLogger(ChanRipper.class);
+
     private static List<ChanSite> bakedin_explicit_domains = Arrays.asList(
             new ChanSite("boards.4chan.org",   Arrays.asList("4cdn.org", "is.4chan.org", "is2.4chan.org", "is3.4chan.org")),
             new ChanSite("boards.4channel.org",   Arrays.asList("4cdn.org", "is.4chan.org", "is2.4chan.org", "is3.4chan.org")),
@@ -50,12 +57,12 @@ public class ChanRipper extends AbstractHTMLRipper {
                 if (chanInfo.contains("[")) {
                     String siteUrl = chanInfo.split("\\[")[0];
                     String[] cdns = chanInfo.replaceAll(siteUrl + "\\[", "").replaceAll("]", "").split("\\|");
-                    LOGGER.debug("site url: " + siteUrl);
-                    LOGGER.debug("cdn: " + Arrays.toString(cdns));
+                    logger.debug("site url: " + siteUrl);
+                    logger.debug("cdn: " + Arrays.toString(cdns));
                     userChans.add(new ChanSite(siteUrl, Arrays.asList(cdns)));
                 } else {
                     // We're parsing a site without cdns
-                    LOGGER.debug("site: " + chanInfo);
+                    logger.debug("site: " + chanInfo);
                     userChans.add(new ChanSite(chanInfo));
                 }
             }
@@ -72,12 +79,12 @@ public class ChanRipper extends AbstractHTMLRipper {
         );
 
     private ChanSite chanSite;
-    private Boolean generalChanSite = true;
+    private boolean generalChanSite = true;
 
     public ChanRipper(URL url) throws IOException {
         super(url);
         for (ChanSite _chanSite : explicit_domains) {
-            LOGGER.info(_chanSite.domains);
+            logger.info(_chanSite.domains);
             if (_chanSite.domains.contains(url.getHost())) {
                 chanSite = _chanSite;
                 generalChanSite = false;
@@ -104,16 +111,16 @@ public class ChanRipper extends AbstractHTMLRipper {
     public String getAlbumTitle(URL url) throws MalformedURLException {
         try {
             // Attempt to use album title as GID
-            Document doc = getFirstPage();
+            Document doc = getCachedFirstPage();
             try {
                 String subject = doc.select(".post.op > .postinfo > .subject").first().text();
                 return getHost() + "_" + getGID(url) + "_" + subject;
             } catch (NullPointerException e) {
-                LOGGER.warn("Failed to get thread title from " + url);
+                logger.warn("Failed to get thread title from " + url);
             }
         } catch (Exception e) {
             // Fall back to default album naming convention
-            LOGGER.warn("Failed to get album title from " + url, e);
+            logger.warn("Failed to get album title from " + url, e);
         }
         // Fall back on the GID
         return getHost() + "_" + getGID(url);
@@ -195,22 +202,20 @@ public class ChanRipper extends AbstractHTMLRipper {
         return this.url.getHost();
     }
 
-    @Override
-    public Document getFirstPage() throws IOException {
-        return Http.url(this.url).get();
+    public Document getFirstPage() throws IOException, URISyntaxException {
+        return super.getFirstPage();
     }
-
     private boolean isURLBlacklisted(String url) {
         for (String blacklist_item : url_piece_blacklist) {
             if (url.contains(blacklist_item)) {
-                LOGGER.debug("Skipping link that contains '"+blacklist_item+"': " + url);
+                logger.debug("Skipping link that contains '"+blacklist_item+"': " + url);
                 return true;
             }
         }
         return false;
     }
     @Override
-    public List<String> getURLsFromPage(Document page) {
+    public List<String> getURLsFromPage(Document page) throws URISyntaxException {
         List<String> imageURLs = new ArrayList<>();
         Pattern p; Matcher m;
         for (Element link : page.select("a")) {
@@ -244,7 +249,7 @@ public class ChanRipper extends AbstractHTMLRipper {
                     }
                     // Don't download the same URL twice
                     if (imageURLs.contains(href)) {
-                        LOGGER.debug("Already attempted: " + href);
+                        logger.debug("Already attempted: " + href);
                         continue;
                     }
                     imageURLs.add(href);
@@ -256,8 +261,8 @@ public class ChanRipper extends AbstractHTMLRipper {
                 //Copied code from RedditRipper, getFilesFromURL should also implement stuff like flickr albums
                 URL originalURL;
                 try {
-                    originalURL = new URL(href);
-                } catch (MalformedURLException e) {
+                    originalURL = new URI(href).toURL();
+                } catch (MalformedURLException | URISyntaxException | IllegalArgumentException e) {
                     continue;
                 }
 
