@@ -1,15 +1,20 @@
 package com.rarchives.ripme.ripper.rippers;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.jsoup.nodes.Document;
@@ -37,6 +42,8 @@ import com.rarchives.ripme.utils.Http;
  *
  */
 public class FivehundredpxRipper extends AbstractJSONRipper {
+
+    private static final Logger logger = LogManager.getLogger(FivehundredpxRipper.class);
 
     private int page = 1;
     private String baseURL = "https://api.500px.com/v1";
@@ -153,7 +160,7 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
 
     /** Convert username to UserID. */
     private String getUserID(String username) throws IOException {
-        LOGGER.info("Fetching user ID for " + username);
+        logger.info("Fetching user ID for " + username);
         JSONObject json = new Http("https://api.500px.com/v1/" +
                     "users/show" +
                     "?username=" + username +
@@ -163,9 +170,9 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
     }
 
     @Override
-    public JSONObject getFirstPage() throws IOException {
-        URL apiURL = new URL(baseURL + "&consumer_key=" + CONSUMER_KEY);
-        LOGGER.debug("apiURL: " + apiURL);
+    public JSONObject getFirstPage() throws IOException, URISyntaxException {
+        URL apiURL = new URI(baseURL + "&consumer_key=" + CONSUMER_KEY).toURL();
+        logger.debug("apiURL: " + apiURL);
         JSONObject json = Http.url(apiURL).getJSON();
 
         if (baseURL.contains("/galleries?")) {
@@ -185,7 +192,7 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
                      + "?rpp=100"
                      + "&image_size=5"
                      + "&consumer_key=" + CONSUMER_KEY;
-                LOGGER.info("Loading " + blogURL);
+                logger.info("Loading " + blogURL);
                 sendUpdate(STATUS.LOADING_RESOURCE, "Gallery ID " + galleryID + " for userID " + userID);
                 JSONObject thisJSON = Http.url(blogURL).getJSON();
                 JSONArray thisPhotos = thisJSON.getJSONArray("photos");
@@ -216,7 +223,7 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
                      + "&rpp=100"
                      + "&image_size=5"
                      + "&consumer_key=" + CONSUMER_KEY;
-                LOGGER.info("Loading " + blogURL);
+                logger.info("Loading " + blogURL);
                 sendUpdate(STATUS.LOADING_RESOURCE, "Story ID " + blogid + " for user " + username);
                 JSONObject thisJSON = Http.url(blogURL).getJSON();
                 JSONArray thisPhotos = thisJSON.getJSONArray("photos");
@@ -231,7 +238,7 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
     }
 
     @Override
-    public JSONObject getNextPage(JSONObject json) throws IOException {
+    public JSONObject getNextPage(JSONObject json) throws IOException, URISyntaxException {
         if (isThisATest()) {
             return null;
         }
@@ -248,9 +255,9 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
 
         sleep(500);
         ++page;
-        URL apiURL = new URL(baseURL
+        URL apiURL = new URI(baseURL
                              + "&page=" + page
-                             + "&consumer_key=" + CONSUMER_KEY);
+                             + "&consumer_key=" + CONSUMER_KEY).toURL();
         return Http.url(apiURL).getJSON();
     }
 
@@ -268,20 +275,20 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
             Document doc;
             Elements images = new Elements();
             try {
-                LOGGER.debug("Loading " + rawUrl);
+                logger.debug("Loading " + rawUrl);
                 super.retrievingSource(rawUrl);
                 doc = Http.url(rawUrl).get();
                 images = doc.select("div#preload img");
             }
             catch (IOException e) {
-                LOGGER.error("Error fetching full-size image from " + rawUrl, e);
+                logger.error("Error fetching full-size image from " + rawUrl, e);
             }
             if (!images.isEmpty()) {
                 imageURL = images.first().attr("src");
-                LOGGER.debug("Found full-size non-watermarked image: " + imageURL);
+                logger.debug("Found full-size non-watermarked image: " + imageURL);
             }
             else {
-                LOGGER.debug("Falling back to image_url from API response");
+                logger.debug("Falling back to image_url from API response");
                 imageURL = photo.getString("image_url");
                 imageURL = imageURL.replaceAll("/4\\.", "/5.");
                 // See if there's larger images
@@ -289,20 +296,15 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
                     String fsURL = imageURL.replaceAll("/5\\.", "/" + imageSize + ".");
                     sleep(10);
                     if (urlExists(fsURL)) {
-                        LOGGER.info("Found larger image at " + fsURL);
+                        logger.info("Found larger image at " + fsURL);
                         imageURL = fsURL;
                         break;
                     }
                 }
             }
-            if (imageURL == null) {
-                LOGGER.error("Failed to find image for photo " + photo.toString());
-            }
-            else {
-                imageURLs.add(imageURL);
-                if (isThisATest()) {
-                    break;
-                }
+            imageURLs.add(imageURL);
+            if (isThisATest()) {
+                break;
             }
         }
         return imageURLs;
@@ -310,13 +312,13 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
 
     private boolean urlExists(String url) {
         try {
-            HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+            HttpURLConnection connection = (HttpURLConnection) new URI(url).toURL().openConnection();
             connection.setRequestMethod("HEAD");
             if (connection.getResponseCode() != 200) {
                 throw new IOException("Couldn't find full-size image at " + url);
             }
             return true;
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             return false;
         }
     }
@@ -330,8 +332,8 @@ public class FivehundredpxRipper extends AbstractJSONRipper {
     public void downloadURL(URL url, int index) {
         String u = url.toExternalForm();
         String[] fields = u.split("/");
-        String prefix = getPrefix(index) + fields[fields.length - 3];
-        File saveAs = new File(getWorkingDir() + File.separator + prefix + ".jpg");
+        String prefix = "/" + getPrefix(index) + fields[fields.length - 3];
+        Path saveAs = Paths.get(getWorkingDir() + prefix + ".jpg");
         addURLToDownload(url,  saveAs,  "", null, false);
     }
 
