@@ -2,25 +2,49 @@ package com.rarchives.ripme.ripper.rippers;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.TreeMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import com.rarchives.ripme.ui.RipStatusMessage;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
+import org.json.JSONException;
 import org.json.JSONObject;
 import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 
 import com.rarchives.ripme.ripper.AbstractHTMLRipper;
 import com.rarchives.ripme.ripper.DownloadThreadPool;
+import com.rarchives.ripme.ui.RipStatusMessage;
 import com.rarchives.ripme.utils.Http;
-import org.jsoup.nodes.Element;
 
 public class FlickrRipper extends AbstractHTMLRipper {
 
-    private Document albumDoc = null;
+    private static final Logger logger = LogManager.getLogger(FlickrRipper.class);
+
     private final DownloadThreadPool flickrThreadPool;
+
+    private enum UrlType {
+        USER,
+        PHOTOSET
+    }
+
+    private class Album {
+        final UrlType type;
+        final String id;
+
+        Album(UrlType type, String id) {
+            this.type = type;
+            this.id = id;
+        }
+    }
+
     @Override
     public DownloadThreadPool getThreadPool() {
         return flickrThreadPool;
@@ -46,7 +70,7 @@ public class FlickrRipper extends AbstractHTMLRipper {
     }
 
     @Override
-    public URL sanitizeURL(URL url) throws MalformedURLException {
+    public URL sanitizeURL(URL url) throws MalformedURLException, URISyntaxException {
         String sUrl = url.toExternalForm();
         // Strip out https
         sUrl = sUrl.replace("https://secure.flickr.com", "http://www.flickr.com");
@@ -57,7 +81,7 @@ public class FlickrRipper extends AbstractHTMLRipper {
             }
             sUrl += "pool";
         }
-        return new URL(sUrl);
+        return new URI(sUrl).toURL();
     }
     // FLickr is one of those sites what includes a api key in sites javascript
     // TODO let the user provide their own api key
@@ -69,11 +93,11 @@ public class FlickrRipper extends AbstractHTMLRipper {
             // You have to use .html here as .text will strip most of the javascript
             m = p.matcher(e.html());
             if (m.find()) {
-                LOGGER.info("Found api key:" + m.group(1));
+                logger.info("Found api key:" + m.group(1));
                 return m.group(1);
             }
         }
-        LOGGER.error("Unable to get api key");
+        logger.error("Unable to get api key");
         // A nice error message to tell our users what went wrong
         sendUpdate(RipStatusMessage.STATUS.DOWNLOAD_WARN, "Unable to extract api key from flickr");
         sendUpdate(RipStatusMessage.STATUS.DOWNLOAD_WARN, "Using hardcoded api key");
@@ -81,72 +105,87 @@ public class FlickrRipper extends AbstractHTMLRipper {
     }
 
     // The flickr api is a monster of weird settings so we just request everything that the webview does
-    private String apiURLBuilder(String photoset, String pageNumber, String apiKey) {
-        LOGGER.info("https://api.flickr.com/services/rest?extras=can_addmeta," +
-                "can_comment,can_download,can_share,contact,count_comments,count_faves,count_views,date_taken," +
-                "date_upload,icon_urls_deep,isfavorite,ispro,license,media,needs_interstitial,owner_name," +
-                "owner_datecreate,path_alias,realname,rotation,safety_level,secret_k,secret_h,url_c,url_f,url_h,url_k," +
-                "url_l,url_m,url_n,url_o,url_q,url_s,url_sq,url_t,url_z,visibility,visibility_source,o_dims," +
-                "is_marketplace_printable,is_marketplace_licensable,publiceditability&per_page=100&page="+ pageNumber + "&" +
-                "get_user_info=1&primary_photo_extras=url_c,%20url_h,%20url_k,%20url_l,%20url_m,%20url_n,%20url_o" +
-                ",%20url_q,%20url_s,%20url_sq,%20url_t,%20url_z,%20needs_interstitial,%20can_share&jump_to=&" +
-                "photoset_id=" + photoset + "&viewerNSID=&method=flickr.photosets.getPhotos&csrf=&" +
-                "api_key=" + apiKey + "&format=json&hermes=1&hermesClient=1&reqId=358ed6a0&nojsoncallback=1");
+    private String apiURLBuilder(Album album, String pageNumber, String apiKey) {
+        String method = null;
+        String idField = null;
+        switch (album.type) {
+            case PHOTOSET:
+                method = "flickr.photosets.getPhotos";
+                idField = "photoset_id=" + album.id;
+                break;
+            case USER:
+                method = "flickr.people.getPhotos";
+                idField = "user_id=" + album.id;
+                break;
+        }
+
         return "https://api.flickr.com/services/rest?extras=can_addmeta," +
-                "can_comment,can_download,can_share,contact,count_comments,count_faves,count_views,date_taken," +
-                "date_upload,icon_urls_deep,isfavorite,ispro,license,media,needs_interstitial,owner_name," +
-                "owner_datecreate,path_alias,realname,rotation,safety_level,secret_k,secret_h,url_c,url_f,url_h,url_k," +
-                "url_l,url_m,url_n,url_o,url_q,url_s,url_sq,url_t,url_z,visibility,visibility_source,o_dims," +
-                "is_marketplace_printable,is_marketplace_licensable,publiceditability&per_page=100&page="+ pageNumber + "&" +
-                "get_user_info=1&primary_photo_extras=url_c,%20url_h,%20url_k,%20url_l,%20url_m,%20url_n,%20url_o" +
-                ",%20url_q,%20url_s,%20url_sq,%20url_t,%20url_z,%20needs_interstitial,%20can_share&jump_to=&" +
-                "photoset_id=" + photoset + "&viewerNSID=&method=flickr.photosets.getPhotos&csrf=&" +
-                "api_key=" + apiKey + "&format=json&hermes=1&hermesClient=1&reqId=358ed6a0&nojsoncallback=1";
+        "can_comment,can_download,can_share,contact,count_comments,count_faves,count_views,date_taken," +
+        "date_upload,icon_urls_deep,isfavorite,ispro,license,media,needs_interstitial,owner_name," +
+        "owner_datecreate,path_alias,realname,rotation,safety_level,secret_k,secret_h,url_c,url_f,url_h,url_k," +
+        "url_l,url_m,url_n,url_o,url_q,url_s,url_sq,url_t,url_z,visibility,visibility_source,o_dims," +
+        "is_marketplace_printable,is_marketplace_licensable,publiceditability&per_page=100&page="+ pageNumber + "&" +
+        "get_user_info=1&primary_photo_extras=url_c,%20url_h,%20url_k,%20url_l,%20url_m,%20url_n,%20url_o" +
+        ",%20url_q,%20url_s,%20url_sq,%20url_t,%20url_z,%20needs_interstitial,%20can_share&jump_to=&" +
+        idField + "&viewerNSID=&method=" + method + "&csrf=&" +
+        "api_key=" + apiKey + "&format=json&hermes=1&hermesClient=1&reqId=358ed6a0&nojsoncallback=1";
     }
 
     private JSONObject getJSON(String page, String apiKey) {
         URL pageURL = null;
         String apiURL = null;
         try {
-            apiURL = apiURLBuilder(getPhotosetID(url.toExternalForm()), page, apiKey);
-            pageURL = new URL(apiURL);
-        }  catch (MalformedURLException e) {
-            LOGGER.error("Unable to get api link " + apiURL + " is malformed");
+            apiURL = apiURLBuilder(getAlbum(url.toExternalForm()), page, apiKey);
+            pageURL = new URI(apiURL).toURL();
+        }  catch (MalformedURLException | URISyntaxException e) {
+            logger.error("Unable to get api link " + apiURL + " is malformed");
         }
         try {
-            LOGGER.info(Http.url(pageURL).ignoreContentType().get().text());
+            logger.info("Fetching: " + apiURL);
+            logger.info("Response: " + Http.url(pageURL).ignoreContentType().get().text());
             return new JSONObject(Http.url(pageURL).ignoreContentType().get().text());
         } catch (IOException e) {
-            LOGGER.error("Unable to get api link " + apiURL + " is malformed");
+            logger.error("Unable to get api link " + apiURL + " is malformed");
             return null;
         }
     }
 
-    private String getPhotosetID(String url) {
+    private Album getAlbum(String url) throws MalformedURLException {
         Pattern p; Matcher m;
 
-        // Root:  https://www.flickr.com/photos/115858035@N04/
+        // User photostream:  https://www.flickr.com/photos/115858035@N04/
         // Album: https://www.flickr.com/photos/115858035@N04/sets/72157644042355643/
 
         final String domainRegex = "https?://[wm.]*flickr.com";
         final String userRegex = "[a-zA-Z0-9@_-]+";
         // Album
-        p = Pattern.compile("^" + domainRegex + "/photos/(" + userRegex + ")/(sets|albums)/([0-9]+)/?.*$");
+        p = Pattern.compile("^" + domainRegex + "/photos/" + userRegex + "/(sets|albums)/([0-9]+)/?.*$");
         m = p.matcher(url);
         if (m.matches()) {
-            return m.group(3);
+            return new Album(UrlType.PHOTOSET, m.group(2));
         }
-        return null;
+
+        // User photostream
+        p = Pattern.compile("^" + domainRegex + "/photos/(" + userRegex + ")/?$");
+        m = p.matcher(url);
+        if (m.matches()) {
+            return new Album(UrlType.USER, m.group(1));
+        }
+
+        String errorMessage = "Failed to extract photoset ID from url: " + url;
+
+        logger.error(errorMessage);
+        throw new MalformedURLException(errorMessage);
     }
 
     @Override
-    public String getAlbumTitle(URL url) throws MalformedURLException {
+    public String getAlbumTitle(URL url) throws MalformedURLException, URISyntaxException {
         if (!url.toExternalForm().contains("/sets/")) {
             return super.getAlbumTitle(url);
         }
         try {
             // Attempt to use album title as GID
-            Document doc = getFirstPage();
+            Document doc = getCachedFirstPage();
             String user = url.toExternalForm();
             user = user.substring(user.indexOf("/photos/") + "/photos/".length());
             user = user.substring(0, user.indexOf("/"));
@@ -196,13 +235,6 @@ public class FlickrRipper extends AbstractHTMLRipper {
                         + " Got: " + url);
     }
 
-    @Override
-    public Document getFirstPage() throws IOException {
-        if (albumDoc == null) {
-            albumDoc = Http.url(url).get();
-        }
-        return albumDoc;
-    }
 
     @Override
     public List<String> getURLsFromPage(Document doc) {
@@ -214,16 +246,30 @@ public class FlickrRipper extends AbstractHTMLRipper {
             if (jsonData.has("stat") && jsonData.getString("stat").equals("fail")) {
                 break;
             } else {
-                int totalPages = jsonData.getJSONObject("photoset").getInt("pages");
-                LOGGER.info(jsonData);
-                JSONArray pictures = jsonData.getJSONObject("photoset").getJSONArray("photo");
+                // Determine root key
+                JSONObject rootData;
+
+                try {
+                    rootData = jsonData.getJSONObject("photoset");
+                } catch (JSONException e) {
+                    try {
+                        rootData = jsonData.getJSONObject("photos");
+                    } catch (JSONException innerE) {
+                        logger.error("Unable to find photos in response");
+                        break;
+                    }
+                }
+
+                int totalPages = rootData.getInt("pages");
+                logger.info(jsonData);
+                JSONArray pictures = rootData.getJSONArray("photo");
                 for (int i = 0; i < pictures.length(); i++) {
-                    LOGGER.info(i);
+                    logger.info(i);
                     JSONObject data = (JSONObject) pictures.get(i);
                     try {
                         addURLToDownload(getLargestImageURL(data.getString("id"), apiKey));
-                    } catch (MalformedURLException e) {
-                        LOGGER.error("Flickr MalformedURLException: " + e.getMessage());
+                    } catch (MalformedURLException | URISyntaxException e) {
+                        logger.error("Flickr MalformedURLException: " + e.getMessage());
                     }
 
                 }
@@ -245,11 +291,11 @@ public class FlickrRipper extends AbstractHTMLRipper {
         addURLToDownload(url, getPrefix(index));
     }
 
-    private URL getLargestImageURL(String imageID, String apiKey) throws MalformedURLException {
+    private URL getLargestImageURL(String imageID, String apiKey) throws MalformedURLException, URISyntaxException {
         TreeMap<Integer, String> imageURLMap = new TreeMap<>();
 
         try {
-            URL imageAPIURL = new URL("https://www.flickr.com/services/rest/?method=flickr.photos.getSizes&api_key=" + apiKey + "&photo_id=" + imageID + "&format=json&nojsoncallback=1");
+            URL imageAPIURL = new URI("https://www.flickr.com/services/rest/?method=flickr.photos.getSizes&api_key=" + apiKey + "&photo_id=" + imageID + "&format=json&nojsoncallback=1").toURL();
             JSONArray imageSizes = new JSONObject(Http.url(imageAPIURL).ignoreContentType().get().text()).getJSONObject("sizes").getJSONArray("size");
             for (int i = 0; i < imageSizes.length(); i++) {
                 JSONObject imageInfo = imageSizes.getJSONObject(i);
@@ -257,13 +303,13 @@ public class FlickrRipper extends AbstractHTMLRipper {
             }
 
         } catch (org.json.JSONException e) {
-            LOGGER.error("Error in  parsing of Flickr API: " + e.getMessage());
+            logger.error("Error in  parsing of Flickr API: " + e.getMessage());
         } catch (MalformedURLException e) {
-            LOGGER.error("Malformed URL returned by API");
+            logger.error("Malformed URL returned by API");
         } catch (IOException e) {
-            LOGGER.error("IOException while looking at image sizes: " + e.getMessage());
+            logger.error("IOException while looking at image sizes: " + e.getMessage());
         }
 
-        return new URL(imageURLMap.lastEntry().getValue());
+        return new URI(imageURLMap.lastEntry().getValue()).toURL();
     }
 }
