@@ -1,25 +1,29 @@
 package com.rarchives.ripme.ripper.rippers;
 
-import com.rarchives.ripme.ripper.AbstractHTMLRipper;
-import com.rarchives.ripme.ripper.DownloadThreadPool;
-import com.rarchives.ripme.utils.Http;
-
-import org.jsoup.Connection.Response;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-import org.jsoup.select.Elements;
-
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import static com.rarchives.ripme.App.logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.jsoup.Connection.Response;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
+import org.jsoup.select.Elements;
+
+import com.rarchives.ripme.ripper.AbstractHTMLRipper;
+import com.rarchives.ripme.ripper.DownloadThreadPool;
+import com.rarchives.ripme.utils.Http;
 
 public class HqpornerRipper extends AbstractHTMLRipper {
+
+	private static final Logger logger = LogManager.getLogger(HqpornerRipper.class);
 
 	private static final String VIDEO_URL_PREFIX = "https://hqporner.com";
 
@@ -63,9 +67,8 @@ public class HqpornerRipper extends AbstractHTMLRipper {
 	}
 
 	@Override
-	public Document getFirstPage() throws IOException {
-		// "url" is an instance field of the superclass
-		return Http.url(url).get();
+	public Document getFirstPage() throws IOException, URISyntaxException {
+		return super.getFirstPage();
 	}
 
 	@Override
@@ -130,7 +133,7 @@ public class HqpornerRipper extends AbstractHTMLRipper {
 		return true;
 	}
 
-	private class HqpornerDownloadThread extends Thread {
+	private class HqpornerDownloadThread implements Runnable {
 
 		private URL hqpornerVideoPageUrl;
 		//private int index;
@@ -164,11 +167,11 @@ public class HqpornerRipper extends AbstractHTMLRipper {
 				}
 
 				if (downloadUrl != null) {
-					addURLToDownload(new URL(downloadUrl), "", subdirectory, "", null, getVideoName(), "mp4");
+					addURLToDownload(new URI(downloadUrl).toURL(), "", subdirectory, "", null, getVideoName(), "mp4");
 				}
 
-			} catch (IOException e) {
-				LOGGER.error("[!] Exception while downloading video.", e);
+			} catch (IOException | URISyntaxException e) {
+				logger.error("[!] Exception while downloading video.", e);
 			}
 		}
 
@@ -215,7 +218,7 @@ public class HqpornerRipper extends AbstractHTMLRipper {
 
 			try {
 				logger.info("Trying to download from unknown video host " + videoPageurl);
-				URL url = new URL(videoPageurl);
+				URL url = new URI(videoPageurl).toURL();
 				Response response = Http.url(url).referrer(hqpornerVideoPageUrl).response();
 				Document doc = response.parse();
 
@@ -245,7 +248,7 @@ public class HqpornerRipper extends AbstractHTMLRipper {
 					}
 				}
 
-			} catch (IOException e) {
+			} catch (IOException | URISyntaxException e) {
 				logger.error("Unable to get video url using generic methods.");
 			}
 
@@ -281,8 +284,8 @@ public class HqpornerRipper extends AbstractHTMLRipper {
 	}// class HqpornerDownloadThread
 
 	public String getBestQualityLink(List<String> list) {
-		// return link with the highest quality subsubstring. Keeping it simple for now. 
-		// 1080 > 720 > 480 > 360 > 240 
+		// return link with the highest quality subsubstring. Keeping it simple for now.
+		// 1080 > 720 > 480 > 360 > 240
 		if (list.isEmpty()) {
 			return null;
 		}
