@@ -1,25 +1,53 @@
 package com.rarchives.ripme.ripper.rippers;
 
-import java.io.File;
+import static j2html.TagCreator.a;
+import static j2html.TagCreator.body;
+import static j2html.TagCreator.br;
+import static j2html.TagCreator.div;
+import static j2html.TagCreator.h1;
+import static j2html.TagCreator.head;
+import static j2html.TagCreator.iff;
+import static j2html.TagCreator.rawHtml;
+import static j2html.TagCreator.script;
+import static j2html.TagCreator.span;
+import static j2html.TagCreator.style;
+import static j2html.TagCreator.title;
+
 import java.io.IOException;
+import java.io.OutputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Date;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import com.rarchives.ripme.ui.RipStatusMessage;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
+import org.json.JSONException;
 import org.json.JSONObject;
 import org.json.JSONTokener;
+import org.jsoup.Jsoup;
 
 import com.rarchives.ripme.ripper.AlbumRipper;
+import com.rarchives.ripme.ui.RipStatusMessage;
 import com.rarchives.ripme.ui.UpdateUtils;
 import com.rarchives.ripme.utils.Http;
 import com.rarchives.ripme.utils.RipUtils;
 import com.rarchives.ripme.utils.Utils;
 
+import j2html.TagCreator;
+import j2html.tags.ContainerTag;
+import j2html.tags.specialized.DivTag;
+
 public class RedditRipper extends AlbumRipper {
+
+    private static final Logger logger = LogManager.getLogger(RedditRipper.class);
 
     public RedditRipper(URL url) throws IOException {
         super(url);
@@ -46,41 +74,52 @@ public class RedditRipper extends AlbumRipper {
     }
 
     @Override
-    public URL sanitizeURL(URL url) throws MalformedURLException {
+    public URL sanitizeURL(URL url) throws MalformedURLException, URISyntaxException {
         String u = url.toExternalForm();
         // Strip '/u/' from URL
         u = u.replaceAll("reddit\\.com/u/", "reddit.com/user/");
-        return new URL(u);
+        return new URI(u).toURL();
     }
 
-    private URL getJsonURL(URL url) throws MalformedURLException {
+    private URL getJsonURL(URL url) throws MalformedURLException, URISyntaxException {
+        // Convert gallery to post link and append ".json"
+        Pattern p = Pattern.compile("^https?://[a-zA-Z0-9.]{0,4}reddit\\.com/gallery/([a-zA-Z0-9]+).*$");
+        Matcher m = p.matcher(url.toExternalForm());
+        if (m.matches()) {
+            return new URI("https://reddit.com/" +m.group(m.groupCount())+ ".json").toURL();
+        }
+
         // Append ".json" to URL in appropriate location.
         String result = url.getProtocol() + "://" + url.getHost() + url.getPath() + ".json";
         if (url.getQuery() != null) {
             result += "?" + url.getQuery();
         }
-        return new URL(result);
+        return new URI(result).toURL();
     }
 
     @Override
     public void rip() throws IOException {
-        URL jsonURL = getJsonURL(this.url);
-        while (true) {
-            if (shouldAddURL()) {
-                sendUpdate(RipStatusMessage.STATUS.DOWNLOAD_COMPLETE_HISTORY, "Already seen the last " + alreadyDownloadedUrls + " images ending rip");
-                break;
+        try {
+            URL jsonURL = getJsonURL(this.url);
+            while (true) {
+                if (shouldAddURL()) {
+                    sendUpdate(RipStatusMessage.STATUS.DOWNLOAD_COMPLETE_HISTORY, "Already seen the last " + alreadyDownloadedUrls + " images ending rip");
+                    break;
+                }
+                jsonURL = getAndParseAndReturnNext(jsonURL);
+                if (jsonURL == null || isThisATest() || isStopped()) {
+                    break;
+                }
             }
-            jsonURL = getAndParseAndReturnNext(jsonURL);
-            if (jsonURL == null || isThisATest() || isStopped()) {
-                break;
-            }
+        } catch (URISyntaxException e) {
+            new IOException(e.getMessage());
         }
         waitForThreads();
     }
 
 
 
-    private URL getAndParseAndReturnNext(URL url) throws IOException {
+    private URL getAndParseAndReturnNext(URL url) throws IOException, URISyntaxException {
         JSONArray jsonArray = getJsonArrayFromURL(url), children;
         JSONObject json, data;
         URL nextURL = null;
@@ -95,7 +134,19 @@ public class RedditRipper extends AlbumRipper {
             }
             children = data.getJSONArray("children");
             for (int j = 0; j < children.length(); j++) {
-                parseJsonChild(children.getJSONObject(j));
+                try {
+                    parseJsonChild(children.getJSONObject(j));
+
+                    if (children.getJSONObject(j).getString("kind").equals("t3") &&
+                            children.getJSONObject(j).getJSONObject("data").getBoolean("is_self")
+                    ) {
+                        URL selfPostURL = new URI(children.getJSONObject(j).getJSONObject("data").getString("url")).toURL();
+                        System.out.println(selfPostURL.toExternalForm());
+                        saveText(getJsonArrayFromURL(getJsonURL(selfPostURL)));
+                    }
+                } catch (Exception e) {
+                    logger.debug("at index " + i + ", for this data: "  + data.toString() + e);
+                }
             }
             if (data.has("after") && !data.isNull("after")) {
                 String nextURLString = Utils.stripURLParameter(url.toExternalForm(), "after");
@@ -105,7 +156,7 @@ public class RedditRipper extends AlbumRipper {
                 else {
                     nextURLString = nextURLString.concat("?after=" + data.getString("after"));
                 }
-                nextURL = new URL(nextURLString);
+                nextURL = new URI(nextURLString).toURL();
             }
         }
 
@@ -113,7 +164,7 @@ public class RedditRipper extends AlbumRipper {
         try {
             Thread.sleep(2000);
         } catch (InterruptedException e) {
-            LOGGER.warn("Interrupted while sleeping", e);
+            logger.warn("Interrupted while sleeping", e);
         }
         return nextURL;
     }
@@ -131,7 +182,7 @@ public class RedditRipper extends AlbumRipper {
             try {
                 Thread.sleep(timeDiff);
             } catch (InterruptedException e) {
-                LOGGER.warn("[!] Interrupted while waiting to load next page", e);
+                logger.warn("[!] Interrupted while waiting to load next page", e);
                 return new JSONArray();
             }
         }
@@ -150,7 +201,7 @@ public class RedditRipper extends AlbumRipper {
         } else if (jsonObj instanceof JSONArray) {
             jsonArray = (JSONArray) jsonObj;
         } else {
-            LOGGER.warn("[!] Unable to parse JSON: " + jsonString);
+            logger.warn("[!] Unable to parse JSON: " + jsonString);
         }
         return jsonArray;
     }
@@ -188,6 +239,8 @@ public class RedditRipper extends AlbumRipper {
             if (data.getBoolean("is_self")) {
                 // TODO Parse self text
                 handleBody(data.getString("selftext"), data.getString("id"), data.getString("title"));
+            } else if (!data.isNull("gallery_data") && !data.isNull("media_metadata")) {
+                handleGallery(data.getJSONObject("gallery_data").getJSONArray("items"), data.getJSONObject("media_metadata"), data.getString("id"), data.getString("title"));
             } else {
                 // Get link
                 handleURL(data.getString("url"), data.getString("id"), data.getString("title"));
@@ -215,8 +268,123 @@ public class RedditRipper extends AlbumRipper {
         }
     }
 
+    private void saveText(JSONArray jsonArray) throws JSONException {
+        Path saveFileAs;
+
+        JSONObject selfPost = jsonArray.getJSONObject(0).getJSONObject("data")
+                .getJSONArray("children").getJSONObject(0).getJSONObject("data");
+        JSONArray comments = jsonArray.getJSONObject(1).getJSONObject("data")
+                .getJSONArray("children");
+
+        if (selfPost.getString("selftext").equals("")) { return; }
+
+        final String title = selfPost.getString("title");
+        final String id = selfPost.getString("id");
+        final String author = selfPost.getString("author");
+        final String creationDate = new Date((long) selfPost.getInt("created") * 1000).toString();
+        final String subreddit = selfPost.getString("subreddit");
+        final String selfText = selfPost.getString("selftext_html");
+        final String permalink = selfPost.getString("url");
+
+        String html = TagCreator.html(
+                head(
+                        title(title),
+                        style(rawHtml(HTML_STYLING))
+                ),
+                body(
+                        div(
+                                h1(title),
+                                a(subreddit).withHref("https://www.reddit.com/r/" + subreddit),
+                                a("Original").withHref(permalink),
+                                br()
+                        ).withClass("thing"),
+                        div(
+                                div(
+                                        span(
+                                                a(author).withHref("https://www.reddit.com/u/" + author)
+                                        ).withClass("author op")
+                                ).withClass("thing oppost")
+                                        .withText(creationDate)
+                                        .with(rawHtml(Jsoup.parse(selfText).text()))
+                        ).withClass("flex")
+                ).with(getComments(comments, author)),
+                script(rawHtml(HTML_SCRIPT))
+        ).renderFormatted();
+
+        try {
+            saveFileAs = Utils.getPath(workingDir
+                    + "/"
+                    + id + "_" + Utils.filesystemSafe(title)
+                    + ".html");
+            OutputStream out = Files.newOutputStream(saveFileAs);
+            out.write(html.getBytes());
+            out.close();
+        } catch (IOException e) {
+            logger.error("[!] Error creating save file path for description '" + url + "':", e);
+            return;
+        }
+
+        logger.debug("Downloading " + url + "'s self post to " + saveFileAs);
+        super.retrievingSource(permalink);
+        if (!Files.exists(saveFileAs.getParent())) {
+            logger.info("[+] Creating directory: " + Utils.removeCWD(saveFileAs.getParent()));
+            try {
+                Files.createDirectory(saveFileAs.getParent());
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    private ContainerTag<DivTag> getComments(JSONArray comments, String author) {
+        ContainerTag<DivTag> commentsDiv = div().withId("comments");
+
+        for (int i = 0; i < comments.length(); i++) {
+            JSONObject data = comments.getJSONObject(i).getJSONObject("data");
+
+            try {
+                ContainerTag<DivTag>  commentDiv =
+                    div(
+                            span(data.getString("author")).withClasses("author", iff(data.getString("author").equals(author), "op")),
+                            a(new Date((long) data.getInt("created") * 1000).toString()).withHref("#" + data.getString("name"))
+                    ).withClass("thing comment").withId(data.getString("name"))
+                            .with(rawHtml(Jsoup.parse(data.getString("body_html")).text()));
+                getNestedComments(data, commentDiv, author);
+                commentsDiv.with(commentDiv);
+            } catch (Exception e) {
+                logger.debug("at index " + i + ", for this data: "  + data.toString() + e);
+            }
+        }
+        return commentsDiv;
+    }
+
+    private ContainerTag<DivTag> getNestedComments(JSONObject data, ContainerTag<DivTag> parentDiv, String author) {
+        if (data.has("replies") && data.get("replies") instanceof JSONObject) {
+            JSONArray commentChildren = data.getJSONObject("replies").getJSONObject("data").getJSONArray("children");
+            for (int i = 0; i < commentChildren.length(); i++) {
+                JSONObject nestedComment = commentChildren
+                        .getJSONObject(i).getJSONObject("data");
+
+                String nestedCommentAuthor = nestedComment.optString("author");
+                if (!nestedCommentAuthor.isBlank()) {
+                    ContainerTag<DivTag> childDiv =
+                            div(
+                                    div(
+                                            span(nestedCommentAuthor).withClasses("author", iff(nestedCommentAuthor.equals(author), "op")),
+                                            a(new Date((long) nestedComment.getInt("created") * 1000).toString()).withHref("#" + nestedComment.getString("name"))
+                                    ).withClass("comment").withId(nestedComment.getString("name"))
+                                            .with(rawHtml(Jsoup.parse(nestedComment.getString("body_html")).text()))
+                            ).withClass("child");
+
+                    parentDiv.with(getNestedComments(nestedComment, childDiv, author));
+                }
+            }
+        }
+        return parentDiv;
+    }
+
     private URL parseRedditVideoMPD(String vidURL) {
-        org.jsoup.nodes.Document doc = null;
+        org.jsoup.nodes.Document doc;
         try {
             doc = Http.url(vidURL + "/DASHPlaylist.mpd").ignoreContentType().get();
             int largestHeight = 0;
@@ -232,8 +400,8 @@ public class RedditRipper extends AlbumRipper {
                     baseURL = doc.select("MPD > Period > AdaptationSet > Representation[height=" + height + "]").select("BaseURL").text();
                 }
             }
-            return new URL(vidURL + "/" + baseURL);
-        } catch (IOException e) {
+            return new URI(vidURL + "/" + baseURL).toURL();
+        } catch (IOException | URISyntaxException e) {
             e.printStackTrace();
         }
         return null;
@@ -243,8 +411,8 @@ public class RedditRipper extends AlbumRipper {
     private void handleURL(String theUrl, String id, String title) {
         URL originalURL;
         try {
-            originalURL = new URL(theUrl);
-        } catch (MalformedURLException e) {
+            originalURL = new URI(theUrl).toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
             return;
         }
         String subdirectory = "";
@@ -264,21 +432,24 @@ public class RedditRipper extends AlbumRipper {
             Matcher m = p.matcher(url);
             if (m.matches()) {
                 // It's from reddituploads. Assume .jpg extension.
-                String savePath = this.workingDir + File.separator;
-                savePath += id + "-" + m.group(1) + title + ".jpg";
-                addURLToDownload(urls.get(0), new File(savePath));
-            }
-            if (url.contains("v.redd.it")) {
-                String savePath = this.workingDir + File.separator;
-                savePath += id + "-" + url.split("/")[3] + title + ".mp4";
+                String savePath = this.workingDir + "/";
+                savePath += id + "-" + m.group(1) + Utils.filesystemSafe(title) + ".jpg";
+                addURLToDownload(urls.get(0), Utils.getPath(savePath));
+            } else if (url.contains("v.redd.it")) {
+                String savePath = this.workingDir + "/";
+                savePath += id + "-" + url.split("/")[3] + Utils.filesystemSafe(title) + ".mp4";
                 URL urlToDownload = parseRedditVideoMPD(urls.get(0).toExternalForm());
                 if (urlToDownload != null) {
-                    LOGGER.info("url: " + urlToDownload + " file: " + savePath);
-                    addURLToDownload(urlToDownload, new File(savePath));
+                    logger.info("url: " + urlToDownload + " file: " + savePath);
+                    addURLToDownload(urlToDownload, Utils.getPath(savePath));
                 }
-            }
-            else {
-                addURLToDownload(urls.get(0), id + title, "", theUrl, null);
+            } else {
+                if (url.contains("redgifs.com")) {
+                    // redgifs.com rate limits us if we download too fast,
+                    // and redgifs.com is a pretty common link on Reddit.
+                    sleep(3000);
+                }
+                addURLToDownload(urls.get(0), Utils.filesystemSafe(id + title), "", theUrl, null);
             }
         } else if (urls.size() > 1) {
             for (int i = 0; i < urls.size(); i++) {
@@ -287,6 +458,35 @@ public class RedditRipper extends AlbumRipper {
                     prefix += String.format("%03d-", i + 1);
                 }
                 addURLToDownload(urls.get(i), prefix, subdirectory, theUrl, null);
+            }
+        }
+    }
+
+    private void handleGallery(JSONArray data, JSONObject metadata, String id, String title){
+        //TODO handle captions and caption urls
+        String subdirectory = "";
+        if (Utils.getConfigBoolean("reddit.use_sub_dirs", true)) {
+            if (Utils.getConfigBoolean("album_titles.save", true)) {
+                subdirectory = title;
+            }
+        }
+        for (int i = 0; i < data.length(); i++) {
+            JSONObject media = metadata.getJSONObject(data.getJSONObject(i).getString("media_id"));
+            String prefix = id + "-";
+            if (Utils.getConfigBoolean("download.save_order", true)) {
+                //announcement says up to 20 (https://www.reddit.com/r/announcements/comments/hrrh23/now_you_can_make_posts_with_multiple_images/)
+                prefix += String.format("%02d-", i + 1);
+            }
+            try {
+                URL mediaURL;
+            	if (!media.getJSONObject("s").isNull("gif")) {
+            		mediaURL = new URI(media.getJSONObject("s").getString("gif").replaceAll("&amp;", "&")).toURL();
+            	} else {
+            		mediaURL = new URI(media.getJSONObject("s").getString("u").replaceAll("&amp;", "&")).toURL();
+            	}
+                addURLToDownload(mediaURL, prefix, subdirectory);
+            } catch (MalformedURLException | JSONException | URISyntaxException e) {
+                logger.error("[!] Unable to parse gallery JSON:\ngallery_data:\n" + data +"\nmedia_metadata:\n" + metadata);
             }
         }
     }
@@ -312,6 +512,13 @@ public class RedditRipper extends AlbumRipper {
             return "post_" + m.group(m.groupCount());
         }
 
+        // Gallery
+        p = Pattern.compile("^https?://[a-zA-Z0-9.]{0,4}reddit\\.com/gallery/([a-zA-Z0-9]+).*$");
+        m = p.matcher(url.toExternalForm());
+        if (m.matches()) {
+            return "post_" + m.group(m.groupCount());
+        }
+
         // Subreddit
         p = Pattern.compile("^https?://[a-zA-Z0-9.]{0,4}reddit\\.com/r/([a-zA-Z0-9_]+).*$");
         m = p.matcher(url.toExternalForm());
@@ -319,7 +526,10 @@ public class RedditRipper extends AlbumRipper {
             return "sub_" + m.group(m.groupCount());
         }
 
-        throw new MalformedURLException("Only accepts user pages, subreddits, or post, can't understand " + url);
+        throw new MalformedURLException("Only accepts user pages, subreddits, post, or gallery can't understand " + url);
     }
+
+    private static final String HTML_STYLING = " .author { font-weight: bold; } .op { color: blue; } .comment { border: 0px; margin: 0 0 25px; padding-left: 5px; } .child { margin: 2px 0 0 20px; border-left: 2px dashed #AAF; } .collapsed { background: darkgrey; margin-bottom: 0; } .collapsed > div { display: none; } .md { max-width: 840px; padding-right: 1em; } h1 { margin: 0; } body { position: relative; background-color: #eeeeec; color: #00000a; font-weight: 400; font-style: normal; font-variant: normal; font-family: Helvetica,Arial,sans-serif; line-height: 1.4 } blockquote { margin: 5px 5px 5px 15px; padding: 1px 1px 1px 15px; max-width: 60em; border: 1px solid #ccc; border-width: 0 0 0 1px; } pre { white-space: pre-wrap; } img, video { max-width: 60vw; max-height: 90vh; object-fit: contain; } .thing { overflow: hidden; margin: 0 5px 3px 40px; border: 1px solid #e0e0e0; background-color: #fcfcfb; } :target > .md { border: 5px solid blue; } .post { margin-bottom: 20px; margin-top: 20px; } .gold { background: goldenrod; } .silver { background: silver; } .platinum { background: aqua; } .deleted { background: #faa; } .md.deleted { background: inherit; border: 5px solid #faa; } .oppost { background-color: #EEF; } blockquote > p { margin: 0; } #related { max-height: 20em; overflow-y: scroll; background-color: #F4FFF4; } #related h3 { position: sticky; top: 0; background-color: white; } .flex { display: flex; flex-flow: wrap; flex-direction: row-reverse; justify-content: flex-end; } ";
+    private static final String HTML_SCRIPT = "document.addEventListener('mousedown', function(e) { var t = e.target; if (t.className == 'author') { t = t.parentElement; } if (t.classList.contains('comment')) { t.classList.toggle('collapsed'); e.preventDefault(); e.stopPropagation(); return false; } });";
 
 }
