@@ -2,6 +2,8 @@ package com.rarchives.ripme.ripper.rippers;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -10,6 +12,8 @@ import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jsoup.Connection;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
@@ -19,6 +23,8 @@ import com.rarchives.ripme.ripper.AbstractHTMLRipper;
 import com.rarchives.ripme.utils.Http;
 
 public class StaRipper extends AbstractHTMLRipper {
+
+    private static final Logger logger = LogManager.getLogger(StaRipper.class);
 
     public StaRipper(URL url) throws IOException {
         super(url);
@@ -48,12 +54,6 @@ public class StaRipper extends AbstractHTMLRipper {
     }
 
     @Override
-    public Document getFirstPage() throws IOException {
-        // "url" is an instance field of the superclass
-        return Http.url(url).get();
-    }
-
-    @Override
     public List<String> getURLsFromPage(Document doc) {
         List<String> result = new ArrayList<>();
         for (Element el : doc.select("span > span > a.thumb")) {
@@ -61,13 +61,13 @@ public class StaRipper extends AbstractHTMLRipper {
             Document thumbPage = null;
             if (checkURL(thumbPageURL)) {
                 try {
-                    Connection.Response resp = Http.url(new URL(thumbPageURL)).response();
+                    Connection.Response resp = Http.url(new URI(thumbPageURL).toURL()).response();
                     cookies.putAll(resp.cookies());
                     thumbPage = resp.parse();
-                } catch (MalformedURLException e) {
-                    LOGGER.info(thumbPageURL + " is a malformed URL");
+                } catch (MalformedURLException | URISyntaxException e) {
+                    logger.info(thumbPageURL + " is a malformed URL");
                 } catch (IOException e) {
-                    LOGGER.info(e.getMessage());
+                    logger.info(e.getMessage());
                 }
                 String imageDownloadUrl = thumbPage.select("a.dev-page-download").attr("href");
                 if (imageDownloadUrl != null && !imageDownloadUrl.equals("")) {
@@ -81,9 +81,9 @@ public class StaRipper extends AbstractHTMLRipper {
 
     private boolean checkURL(String url) {
         try {
-            new URL(url);
+            new URI(url).toURL();
             return true;
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             return false;
         }
     }
@@ -97,10 +97,10 @@ public class StaRipper extends AbstractHTMLRipper {
                     .followRedirects(false)
                     .execute();
             String imageURL = response.header("Location");
-            LOGGER.info(imageURL);
+            logger.info(imageURL);
             return imageURL;
             } catch (IOException e) {
-                LOGGER.info("Got error message " + e.getMessage() + " trying to download " + url);
+                logger.info("Got error message " + e.getMessage() + " trying to download " + url);
                 return null;
             }
     }
