@@ -2,6 +2,8 @@ package com.rarchives.ripme.ripper.rippers.video;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -11,12 +13,16 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apache.commons.lang.StringEscapeUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jsoup.nodes.Document;
 
 import com.rarchives.ripme.ripper.VideoRipper;
 import com.rarchives.ripme.utils.Http;
 
 public class PornhubRipper extends VideoRipper {
+
+    private static final Logger logger = LogManager.getLogger(PornhubRipper.class);
 
     private static final String HOST = "pornhub";
 
@@ -56,9 +62,9 @@ public class PornhubRipper extends VideoRipper {
     }
 
     @Override
-    public void rip() throws IOException {
+    public void rip() throws IOException, URISyntaxException {
         String vidUrl = "";
-        LOGGER.info("    Retrieving " + this.url.toExternalForm());
+        logger.info("    Retrieving " + this.url.toExternalForm());
         Document doc = Http.url(this.url).get();
         String html = doc.body().html();
         html = StringEscapeUtils.unescapeJavaScript(html);
@@ -146,9 +152,8 @@ public class PornhubRipper extends VideoRipper {
         if (vidUrl.equals("")) {
             throw new IOException("Unable to find encrypted video URL at " + this.url);
         }
-        addURLToDownload(new URL(vidUrl), HOST + "_" + bestQuality + "p_" + getGID(this.url));
+        addURLToDownload(new URI(vidUrl).toURL(), HOST + "_" + bestQuality + "p_" + getGID(this.url));
 
         waitForThreads();
     }
 }
-
