@@ -2,19 +2,24 @@ package com.rarchives.ripme.ripper.rippers.video;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
-
 
 import com.rarchives.ripme.ripper.VideoRipper;
 import com.rarchives.ripme.utils.Http;
 
 public class YuvutuRipper extends VideoRipper {
+
+    private static final Logger logger = LogManager.getLogger(YuvutuRipper.class);
 
     private static final String HOST = "yuvutu";
 
@@ -35,11 +40,6 @@ public class YuvutuRipper extends VideoRipper {
     }
 
     @Override
-    public URL sanitizeURL(URL url) throws MalformedURLException {
-        return url;
-    }
-
-    @Override
     public String getGID(URL url) throws MalformedURLException {
         Pattern p = Pattern.compile("^http://www\\.yuvutu\\.com/video/[0-9]+/(.*)$");
         Matcher m = p.matcher(url.toExternalForm());
@@ -54,8 +54,8 @@ public class YuvutuRipper extends VideoRipper {
     }
 
     @Override
-    public void rip() throws IOException {
-        LOGGER.info("Retrieving " + this.url);
+    public void rip() throws IOException, URISyntaxException {
+        logger.info("Retrieving " + this.url);
         Document doc = Http.url(url).get();
         Element iframe = doc.select("iframe").first();
         String iframeSrc = iframe.attr("src");
@@ -69,12 +69,12 @@ public class YuvutuRipper extends VideoRipper {
             throw new IOException("Could not find script code at " + url);
         }
         Pattern p = Pattern.compile("file: \"(.*?)\"");
-        
+
         for (Element element : script) {
             Matcher m = p.matcher(element.data());
             if (m.find()){
                 String vidUrl = m.group(1);
-                addURLToDownload(new URL(vidUrl), HOST + "_" + getGID(this.url));
+                addURLToDownload(new URI(vidUrl).toURL(), HOST + "_" + getGID(this.url));
             }
         }
         waitForThreads();
