@@ -1,25 +1,33 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.HypnohubRipper;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 public class HypnohubRipperTest extends RippersTest {
-    public void testRip() throws IOException {
-        URL poolURL = new URL("http://hypnohub.net/pool/show/2303");
-        URL postURL = new URL("http://hypnohub.net/post/show/63464/black_hair-bracelet-collar-corruption-female_only-");
+    @Test
+    @Disabled("wants a hunman")
+    public void testRip() throws IOException, URISyntaxException {
+        URL poolURL = new URI("http://hypnohub.net/pool/show/2303").toURL();
+        URL postURL = new URI("http://hypnohub.net/post/show/63464/black_hair-bracelet-collar-corruption-female_only-").toURL();
         HypnohubRipper ripper = new HypnohubRipper(poolURL);
         testRipper(ripper);
         ripper = new HypnohubRipper(postURL);
         testRipper(ripper);
     }
-    public void testGetGID() throws IOException {
-        URL poolURL = new URL("http://hypnohub.net/pool/show/2303");
+    @Test
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL poolURL = new URI("http://hypnohub.net/pool/show/2303").toURL();
         HypnohubRipper ripper = new HypnohubRipper(poolURL);
-        assertEquals("2303", ripper.getGID(poolURL));
+        Assertions.assertEquals("2303", ripper.getGID(poolURL));
 
-        URL postURL = new URL("http://hypnohub.net/post/show/63464/black_hair-bracelet-collar-corruption-female_only-");
-        assertEquals("63464_black_hair-bracelet-collar-corruption-female_only-", ripper.getGID(postURL));
+        URL postURL = new URI("http://hypnohub.net/post/show/63464/black_hair-bracelet-collar-corruption-female_only-").toURL();
+        Assertions.assertEquals("63464_black_hair-bracelet-collar-corruption-female_only-", ripper.getGID(postURL));
     }
 }
